--- a/promotion-config.yaml
+++ b/promotion-config.yaml
@@ -1,4 +1,4 @@
-apiVersion: csdp.codefresh.io/v1
+apiVersion: csdp.codefresh.io/v1beta1
 kind: PromotionTemplate
 metadata:
   name: promotion-template
