--- a/base-flow2-pf.yaml
+++ b/base-flow2-pf.yaml
@@ -1,10 +1,10 @@
 apiVersion: codefresh.io/v1beta1
 kind: PromotionFlow
 metadata:
-  name: base-flow2
+  name: base-flow
   annotations:
     version: 0.0.1
-    description: 'base-flow2'
+    description: 'base-flow'
 spec:
   triggerEnvironment: my-env
   # postTrigger: 'post-action'
