--- a/base-flow2-pf.yaml
+++ b/base-flow2-pf.yaml
@@ -14,7 +14,7 @@ spec:
     - my-env
     policy:
       preAction: 'pre-action'
-      postAction: 'post-action'
+      postAction: 'post-action-failed'
       action: commit 
   - environment: production
     dependsOn:
