--- a/pre-action-failed.yaml
+++ b/pre-action-failed.yaml
@@ -6,7 +6,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: WorkflowTemplate
 metadata:
-  name: pre-action
+  name: pre-action-failed
   annotations:
     version: 0.0.1
     description: 'promotion workflow template'
