--- a/post-action-failed.yaml
+++ b/post-action-failed.yaml
@@ -17,7 +17,7 @@ spec:
       - sh
       source: |
         echo "synced app {{ workflow.parameters.APP_NAME }}"
-        # exit 1
+        exit 1
         # sleep 60
   # - name: echo1
   #   script:
