--- a/post-action.yaml
+++ b/post-action.yaml
@@ -18,7 +18,7 @@ spec:
       source: |
         echo "synced app {{ workflow.parameters.APP_NAME }}"
         # exit 1
-        # sleep 60
+        sleep 60
   # - name: echo1
   #   script:
   #     image: alpine
