Added/Modified pre-action.yaml

--- a/pre-action.yaml
+++ b/pre-action.yaml
@@ -24,6 +24,6 @@ spec:
       - sh
       source: |
         echo "syncing {{ workflow.parameters.APP_NAME }} "
-        exit 1
+        # exit 1
         sleep 60
 
