Added/Modified post-action.yaml

--- a/post-action.yaml
+++ b/post-action.yaml
@@ -3,11 +3,11 @@ kind: WorkflowTemplate
 metadata:
   name: post-action
 spec:
-#   serviceAccountName: promotion-template
+  serviceAccountName: promotion-template
   arguments:
     parameters:
     - name: APP_NAME
-    # - name: COMMIT_SHA
+    - name: COMMIT_SHA
   entrypoint: echo-post-action
   templates:
   - name: echo-post-action
