Added/Modified post-action.yaml

--- a/post-action.yaml
+++ b/post-action.yaml
@@ -7,7 +7,7 @@ spec:
   arguments:
     parameters:
     - name: APP_NAME
-    - name: COMMIT_SHA5
+    # - name: COMMIT_SHA5
   entrypoint: echo-post-action
   templates:
   - name: echo-post-action
@@ -17,7 +17,7 @@ spec:
       - sh
       source: |
         echo "synced app {{ workflow.parameters.APP_NAME }}"
-        # exit 1
+        exit 1
         sleep 60
   # - name: echo1
   #   script:
