--- a/post-action.yaml
+++ b/post-action.yaml
@@ -26,7 +26,6 @@ spec:
       - name: COMMIT_AUTHOR
       - name: COMMIT_MESSAGE
       - name: COMMIT_DATE
-      - name: ARGOCD_HOST
   entrypoint: echo
   templates:
     - name: echo
@@ -44,7 +43,6 @@ spec:
           workflow.parameters.COMMIT_SHA }}, author: {{
           workflow.parameters.COMMIT_AUTHOR }}, commit message: {{
           workflow.parameters.COMMIT_MESSAGE }}, commit date: {{
-          workflow.parameters.COMMIT_DATE }}, argo cd host: {{
-          workflow.parameters.ARGOCD_HOST }}"
+          workflow.parameters.COMMIT_DATE }}"
 
 
