--- a/post-action.yaml
+++ b/post-action.yaml
@@ -34,6 +34,9 @@ spec:
         value: ""
       - name: COMMIT_DATE
         value: ""
+  # Before using this template make sure to apply rbac to your runtime cluster 
+  # https://github.com/codefresh-io/argo-hub/blob/main/examples/post-promotion-starter/versions/0.0.1/rbac.yaml
+  serviceAccountName: argo-hub.post-promotion-starter.0.0.1     
   entrypoint: echo
   templates:
     - name: echo
