--- a/post-action.yaml
+++ b/post-action.yaml
@@ -34,9 +34,9 @@ spec:
         value: ""
       - name: COMMIT_DATE
         value: ""
-  # Before using this template make sure to apply rbac to your runtime cluster 
+  # Before using this template make sure to apply rbac to your runtime cluster
   # https://github.com/codefresh-io/argo-hub/blob/main/examples/post-promotion-starter/versions/0.0.1/rbac.yaml
-  serviceAccountName: argo-hub.post-promotion-starter.0.0.1     
+  serviceAccountName: argo-hub.post-promotion-starter.0.0.1
   entrypoint: echo
   templates:
     - name: echo
@@ -50,10 +50,20 @@ spec:
         command:
           - sh
         source: >
-          echo "syncing {{ workflow.parameters.APP_NAME }} to {{
-          workflow.parameters.COMMIT_SHA }}, author: {{
-          workflow.parameters.COMMIT_AUTHOR }}, commit message: {{
-          workflow.parameters.COMMIT_MESSAGE }}, commit date: {{
-          workflow.parameters.COMMIT_DATE }}"
-
+          echo "syncing {{ workflow.parameters.APP_NAMESPACE }}.{{ workflow.parameters.APP_NAME }} from {{ workflow.parameters.REPO_URL }} branch {{ workflow.parameters.BRANCH }} path {{ workflow.parameters.PATH }}"
+          if [[ -n "${workflow.parameters.COMMIT_SHA}" ]]; then
+             echo "commit SHA: {{ workflow.parameters.COMMIT_SHA }}"
+           fi
+        
+          if [[ -n "${workflow.parameters.COMMIT_AUTHOR}" ]]; then
+             echo "commit author: {{ workflow.parameters.COMMIT_AUTHOR }}"
+          fi
+        
+          if [[ -n "${workflow.parameters.COMMIT_MESSAGE}" ]]; then
+             echo "commit message: {{ workflow.parameters.COMMIT_MESSAGE }}"
+          fi
+        
+          if [[ -n "${workflow.parameters.COMMIT_DATE}" ]]; then
+             echo "commit date: {{ workflow.parameters.COMMIT_DATE }}"
+          fi
 
