--- a/post-action.yaml
+++ b/post-action.yaml
@@ -51,9 +51,9 @@ spec:
           - sh
         source: |
           echo "syncing {{ workflow.parameters.APP_NAMESPACE }}/{{ workflow.parameters.APP_NAME }} from {{ workflow.parameters.REPO_URL }} branch {{ workflow.parameters.BRANCH }} path {{ workflow.parameters.PATH }}"
-          # if [[ -n "${workflow.parameters.COMMIT_SHA}" ]]; then
-          #    echo "commit SHA: {{ workflow.parameters.COMMIT_SHA }}"
-          # fi
+          if [[ -n "${workflow.parameters.COMMIT_SHA}" ]]; then
+             echo "commit SHA: {{ workflow.parameters.COMMIT_SHA }}"
+          fi
         
           # if [[ -n "${workflow.parameters.COMMIT_AUTHOR}" ]]; then
           #    echo "commit author: {{ workflow.parameters.COMMIT_AUTHOR }}"
